unit/src/sds.rs

pub type va_list = __builtin_va_list;
pub type __gnuc_va_list = __builtin_va_list;
pub type int_least8_t = __int_least8_t;
pub type int_least16_t = __int_least16_t;
pub type int_least32_t = __int_least32_t;
pub type int_least64_t = __int_least64_t;
pub type uint_least8_t = __uint_least8_t;
pub type uint_least16_t = __uint_least16_t;
pub type uint_least32_t = __uint_least32_t;
pub type uint_least64_t = __uint_least64_t;
pub type int_fast8_t = ::core::ffi::c_schar;
pub type int_fast16_t = ::core::ffi::c_long;
pub type int_fast32_t = ::core::ffi::c_long;
pub type int_fast64_t = ::core::ffi::c_long;
pub type uint_fast8_t = ::core::ffi::c_uchar;
pub type uint_fast16_t = ::core::ffi::c_ulong;
pub type uint_fast32_t = ::core::ffi::c_ulong;
pub type uint_fast64_t = ::core::ffi::c_ulong;
pub type intmax_t = __intmax_t;
pub type uintmax_t = __uintmax_t;
pub type sds = *mut ::core::ffi::c_char;
#[repr(C, packed)]
pub struct sdshdr5 {
    pub flags: ::core::ffi::c_uchar,
    pub buf: __IncompleteArrayField<::core::ffi::c_char>,
}
#[test]
fn bindgen_test_layout_sdshdr5() {
    const UNINIT: ::core::mem::MaybeUninit<sdshdr5> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<sdshdr5>(),
        1usize,
        concat!("Size of: ", stringify!(sdshdr5))
    );
    assert_eq!(
        ::core::mem::align_of::<sdshdr5>(),
        1usize,
        concat!("Alignment of ", stringify!(sdshdr5))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr5),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buf) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr5),
            "::",
            stringify!(buf)
        )
    );
}
#[repr(C, packed)]
pub struct sdshdr8 {
    pub len: u8,
    pub alloc: u8,
    pub flags: ::core::ffi::c_uchar,
    pub buf: __IncompleteArrayField<::core::ffi::c_char>,
}
#[test]
fn bindgen_test_layout_sdshdr8() {
    const UNINIT: ::core::mem::MaybeUninit<sdshdr8> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<sdshdr8>(),
        3usize,
        concat!("Size of: ", stringify!(sdshdr8))
    );
    assert_eq!(
        ::core::mem::align_of::<sdshdr8>(),
        1usize,
        concat!("Alignment of ", stringify!(sdshdr8))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr8),
            "::",
            stringify!(len)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).alloc) as usize - ptr as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr8),
            "::",
            stringify!(alloc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr8),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buf) as usize - ptr as usize },
        3usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr8),
            "::",
            stringify!(buf)
        )
    );
}
#[repr(C, packed)]
pub struct sdshdr16 {
    pub len: u16,
    pub alloc: u16,
    pub flags: ::core::ffi::c_uchar,
    pub buf: __IncompleteArrayField<::core::ffi::c_char>,
}
#[test]
fn bindgen_test_layout_sdshdr16() {
    const UNINIT: ::core::mem::MaybeUninit<sdshdr16> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<sdshdr16>(),
        5usize,
        concat!("Size of: ", stringify!(sdshdr16))
    );
    assert_eq!(
        ::core::mem::align_of::<sdshdr16>(),
        1usize,
        concat!("Alignment of ", stringify!(sdshdr16))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr16),
            "::",
            stringify!(len)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).alloc) as usize - ptr as usize },
        2usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr16),
            "::",
            stringify!(alloc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr16),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buf) as usize - ptr as usize },
        5usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr16),
            "::",
            stringify!(buf)
        )
    );
}
#[repr(C, packed)]
pub struct sdshdr32 {
    pub len: u32,
    pub alloc: u32,
    pub flags: ::core::ffi::c_uchar,
    pub buf: __IncompleteArrayField<::core::ffi::c_char>,
}
#[test]
fn bindgen_test_layout_sdshdr32() {
    const UNINIT: ::core::mem::MaybeUninit<sdshdr32> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<sdshdr32>(),
        9usize,
        concat!("Size of: ", stringify!(sdshdr32))
    );
    assert_eq!(
        ::core::mem::align_of::<sdshdr32>(),
        1usize,
        concat!("Alignment of ", stringify!(sdshdr32))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr32),
            "::",
            stringify!(len)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).alloc) as usize - ptr as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr32),
            "::",
            stringify!(alloc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr32),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buf) as usize - ptr as usize },
        9usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr32),
            "::",
            stringify!(buf)
        )
    );
}
#[repr(C, packed)]
pub struct sdshdr64 {
    pub len: u64,
    pub alloc: u64,
    pub flags: ::core::ffi::c_uchar,
    pub buf: __IncompleteArrayField<::core::ffi::c_char>,
}
#[test]
fn bindgen_test_layout_sdshdr64() {
    const UNINIT: ::core::mem::MaybeUninit<sdshdr64> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<sdshdr64>(),
        17usize,
        concat!("Size of: ", stringify!(sdshdr64))
    );
    assert_eq!(
        ::core::mem::align_of::<sdshdr64>(),
        1usize,
        concat!("Alignment of ", stringify!(sdshdr64))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).len) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr64),
            "::",
            stringify!(len)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).alloc) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr64),
            "::",
            stringify!(alloc)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).flags) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr64),
            "::",
            stringify!(flags)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).buf) as usize - ptr as usize },
        17usize,
        concat!(
            "Offset of field: ",
            stringify!(sdshdr64),
            "::",
            stringify!(buf)
        )
    );
}
extern "C" {
    pub fn sdsnewlen(init: *const ::core::ffi::c_void, initlen: usize) -> sds;
}
extern "C" {
    pub fn sdstrynewlen(init: *const ::core::ffi::c_void, initlen: usize) -> sds;
}
extern "C" {
    pub fn sdsnew(init: *const ::core::ffi::c_char) -> sds;
}
extern "C" {
    pub fn sdsempty() -> sds;
}
extern "C" {
    pub fn sdsdup(s: sds) -> sds;
}
extern "C" {
    pub fn sdsfree(s: sds);
}
extern "C" {
    pub fn sdsgrowzero(s: sds, len: usize) -> sds;
}
extern "C" {
    pub fn sdscatlen(s: sds, t: *const ::core::ffi::c_void, len: usize) -> sds;
}
extern "C" {
    pub fn sdscat(s: sds, t: *const ::core::ffi::c_char) -> sds;
}
extern "C" {
    pub fn sdscatsds(s: sds, t: sds) -> sds;
}
extern "C" {
    pub fn sdscpylen(s: sds, t: *const ::core::ffi::c_char, len: usize) -> sds;
}
extern "C" {
    pub fn sdscpy(s: sds, t: *const ::core::ffi::c_char) -> sds;
}
extern "C" {
    pub fn sdscatvprintf(s: sds, fmt: *const ::core::ffi::c_char, ap: *mut __va_list_tag) -> sds;
}
extern "C" {
    pub fn sdscatprintf(s: sds, fmt: *const ::core::ffi::c_char, ...) -> sds;
}
extern "C" {
    pub fn sdscatfmt(s: sds, fmt: *const ::core::ffi::c_char, ...) -> sds;
}
extern "C" {
    pub fn sdstrim(s: sds, cset: *const ::core::ffi::c_char) -> sds;
}
extern "C" {
    pub fn sdssubstr(s: sds, start: usize, len: usize);
}
extern "C" {
    pub fn sdsrange(s: sds, start: isize, end: isize);
}
extern "C" {
    pub fn sdsupdatelen(s: sds);
}
extern "C" {
    pub fn sdsclear(s: sds);
}
extern "C" {
    pub fn sdscmp(s1: sds, s2: sds) -> ::core::ffi::c_int;
}
extern "C" {
    pub fn sdssplitlen(
        s: *const ::core::ffi::c_char,
        len: isize,
        sep: *const ::core::ffi::c_char,
        seplen: ::core::ffi::c_int,
        count: *mut ::core::ffi::c_int,
    ) -> *mut sds;
}
extern "C" {
    pub fn sdsfreesplitres(tokens: *mut sds, count: ::core::ffi::c_int);
}
extern "C" {
    pub fn sdstolower(s: sds);
}
extern "C" {
    pub fn sdstoupper(s: sds);
}
extern "C" {
    pub fn sdsfromlonglong(value: ::core::ffi::c_longlong) -> sds;
}
extern "C" {
    pub fn sdscatrepr(s: sds, p: *const ::core::ffi::c_char, len: usize) -> sds;
}
extern "C" {
    pub fn sdssplitargs(
        line: *const ::core::ffi::c_char,
        argc: *mut ::core::ffi::c_int,
    ) -> *mut sds;
}
extern "C" {
    pub fn sdsmapchars(
        s: sds,
        from: *const ::core::ffi::c_char,
        to: *const ::core::ffi::c_char,
        setlen: usize,
    ) -> sds;
}
extern "C" {
    pub fn sdsjoin(
        argv: *mut *mut ::core::ffi::c_char,
        argc: ::core::ffi::c_int,
        sep: *mut ::core::ffi::c_char,
    ) -> sds;
}
extern "C" {
    pub fn sdsjoinsds(
        argv: *mut sds,
        argc: ::core::ffi::c_int,
        sep: *const ::core::ffi::c_char,
        seplen: usize,
    ) -> sds;
}
extern "C" {
    pub fn sdsneedsrepr(s: sds) -> ::core::ffi::c_int;
}
pub type sdstemplate_callback_t = ::core::option::Option<
    unsafe extern "C" fn(variable: sds, arg: *mut ::core::ffi::c_void) -> sds,
>;
extern "C" {
    pub fn sdstemplate(
        template: *const ::core::ffi::c_char,
        cb_func: sdstemplate_callback_t,
        cb_arg: *mut ::core::ffi::c_void,
    ) -> sds;
}
extern "C" {
    pub fn sdsMakeRoomFor(s: sds, addlen: usize) -> sds;
}
extern "C" {
    pub fn sdsMakeRoomForNonGreedy(s: sds, addlen: usize) -> sds;
}
